# auto-tensorflow

./: CONTRIBUTING.md  README.md  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml
auto_tensorflow/: tfa.py
tfa/: tfa_lib.py
tutorial/: TFAuto_|_Regression.ipynb
tutorials/: TFAuto_|_Classification.ipynb  TFAuto_|_Regression.ipynb
