[metadata]
name = rafiq
version = 1.0.0
author = Hasan Rafiq
author_email = rafiqhasan@gmail.com
description = Create ML models using Tensorflow without any knowledge of ML
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rafiqhasan/tensorflow_auto
project_urls =
    Bug Tracker = https://github.com/rafiqhasan/tensorflow_auto/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
