[metadata]
name = rafiq
version = 1.3.1
author = Hasan Rafiq
author_email = rafiqhasan@gmail.com
description = Build Low Code Automated Tensorflow, What-IF explainable models in just 3 lines of code. To make Deep Learning on Tensorflow absolutely easy for the masses with its low code framework and also increase trust on ML models through What-IF model explainability.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rafiqhasan/auto-tensorflow
project_urls =
    Bug Tracker = https://github.com/rafiqhasan/auto-tensorflow/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.6

[options.packages.find]
where =
